welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:5: error: type mismatch;
 found   : Unit
 required: Int
  if (tea-5>=0 && candy-5>=0) {
  ^